[package]
name = "rust-websockets-timebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
chrono = "0.4.31"
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
